--- a/.yamato/urp_terrain-linux-vulkan.yml
+++ b/.yamato/urp_terrain-linux-vulkan.yml
@@ -74,7 +74,7 @@ URP_Terrain_Linux_Vulkan_playmode_mono_Linear_trunk:
       -  sudo apt update
       -  sudo apt install unity-downloader-cli
       -  sudo unity-downloader-cli -u {{editor_versions.trunk_latest_internal.Linux.revision}} -c editor -c il2cpp  --wait --published-only
-      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Runtime' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -122,7 +122,7 @@ URP_Terrain_Linux_Vulkan_editmode_mono_Linear_trunk:
       -  sudo apt update
       -  sudo apt install unity-downloader-cli
       -  sudo unity-downloader-cli -u {{editor_versions.trunk_latest_internal.Linux.revision}} -c editor -c il2cpp  --wait --published-only
-      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Editor' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -252,7 +252,7 @@ URP_Terrain_Linux_Vulkan_playmode_mono_Linear_CUSTOM-REVISION:
       -  sudo apt update
       -  sudo apt install unity-downloader-cli
       -  sudo unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
-      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Runtime' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -308,7 +308,7 @@ URP_Terrain_Linux_Vulkan_editmode_mono_Linear_CUSTOM-REVISION:
       -  sudo apt update
       -  sudo apt install unity-downloader-cli
       -  sudo unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
-      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  DISPLAY=:0.0 ./utr --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Editor' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
