--- a/.yamato/urp_foundation-osx-openglcore.yml
+++ b/.yamato/urp_foundation-osx-openglcore.yml
@@ -23,7 +23,7 @@ URP_Foundation_OSX_OpenGLCore_playmode_mono_Linear_trunk:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli -u {{editor_versions.trunk_latest_internal.OSX.revision}} -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Runtime' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -67,7 +67,7 @@ URP_Foundation_OSX_OpenGLCore_editmode_mono_Linear_trunk:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli -u {{editor_versions.trunk_latest_internal.OSX.revision}} -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Editor' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -90,7 +90,7 @@ URP_Foundation_OSX_OpenGLCore_playmode_mono_Linear_CUSTOM-REVISION:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Runtime' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -142,7 +142,7 @@ URP_Foundation_OSX_OpenGLCore_editmode_mono_Linear_CUSTOM-REVISION:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Foundation/test-results --coverage-options 'enableAdditionalMetrics;generateHtmlReport;assemblyFilters:+Unity.RenderPipelines.Universal.Editor' --coverage-results-path=$YAMATO_SOURCE_DIR/test-results/code-coverage --editor-location=.Editor --enable-code-coverage --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Foundation --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
