--- a/.yamato/all-hdrp_performancetests.yml
+++ b/.yamato/all-hdrp_performancetests.yml
@@ -12,6 +12,8 @@ PR_HDRP_PerformanceTests_trunk:
     dependencies:
       -  path: .yamato/hdrp_performancetests-win-dx11.yml#HDRP_PerformanceTests_Win_DX11_performance_memory_cache_il2cpp_Linear_trunk
          rerun: on-new-revision
+      -  path: .yamato/hdrp_performancetests-win-dx11.yml#HDRP_PerformanceTests_Win_DX11_performance_run_build_cache_il2cpp_Linear_trunk
+         rerun: on-new-revision
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
@@ -29,6 +31,8 @@ PR_HDRP_PerformanceTests_CUSTOM-REVISION:
     name: HDRP_PerformanceTests PR Job - CUSTOM-REVISION
     dependencies:
       -  path: .yamato/hdrp_performancetests-win-dx11.yml#HDRP_PerformanceTests_Win_DX11_performance_memory_cache_il2cpp_Linear_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/hdrp_performancetests-win-dx11.yml#HDRP_PerformanceTests_Win_DX11_performance_run_build_cache_il2cpp_Linear_CUSTOM-REVISION
          rerun: always
     variables:
         CUSTOM_REVISION: custom_revision_not_set
